Added common configurations and core components Addeed new migrations with auditing logic and missed indexes

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -12,3 +12,12 @@ spring:
     url: jdbc:postgresql://localhost:5432/warehouse
     username: flyway
     password: Flyw@y1234!
+
+logging:
+  level:
+    root: INFO
+    org:
+      springframework:
+        web: INFO
+        jdbc:
+          core: TRACE
