Added sell product useCase Added version for article Added optimistic lock failure handling and retry

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -44,3 +44,8 @@ spring:
       max-lifetime: 360000
       idle-timeout: 120000
       transactionIsolation: TRANSACTION_SERIALIZABLE
+
+app:
+  useCases:
+    sellProductUseCase:
+      retryAttemptsLimit: 3
