--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -16,6 +16,10 @@ spring:
 logging:
   level:
     root: INFO
+    com:
+      mikhailsycheuski:
+        test:
+          warehouse: DEBUG
     org:
       springframework:
         web: INFO
