--- a/build.gradle
+++ b/build.gradle
@@ -37,7 +37,6 @@ dependencies {
     runtimeOnly("org.postgresql:postgresql")
 
     testImplementation("org.springframework.boot:spring-boot-starter-test")
-    testImplementation("org.springframework.security:spring-security-test")
 }
 
 def JAVA_VERSION = JavaVersion.VERSION_11
@@ -53,5 +52,12 @@ compileKotlin {
 compileTestKotlin {
     kotlinOptions {
         jvmTarget = JAVA_VERSION
+    }
+}
+
+test {
+    useJUnitPlatform()
+    testLogging {
+        events "passed", "skipped", "failed"
     }
 }
